# python-project-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: ci.yaml
{{cookiecutter.project_name}}/src/utils/: get_latest_package_versions.py
{{cookiecutter.project_name}}/tests/: test_e2e.py  test_main.py
{{cookiecutter.project_slug}}/: README.md  noxfile.py  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml
{{cookiecutter.project_slug}}/src/utils/: get_latest_package_versions.py
{{cookiecutter.project_slug}}/tests/: test_main.py
