[project]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.author_email }}" }
]

requires-python = "=={{ cookiecutter.python_version }}.*"
dependencies = [
    "fastapi", 
    "requests,
    "granian",
]

[dependency-groups]
dev = [
    "fastapi[standard]", "pytest"
]
format = [
    "ruff==0.11.*",
]
lint = [
    "ruff==0.11.*",
]
deploy = [
    
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.__app_name_underscore }}"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle Error
    "F", # pyflakes
    "B", # flake8-bugbear
    "C",  # flake8-comprehensions - checks list/set/dict comprehensions
    "W", # pycodestyle Warning
    "N", # pep8-naming
    "S", # flake8-bandit
    "PL", # Pylint
    "SIM", # flake8-simplify
    "I", # isort
]
ignore = [
    "E501", # line-too-long
    "S101",  # use of "assert" flagged by bandit, needed for tests
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
